2014-10-25  Vincent Belaïche  <vincentb1@users.sourceforge.net>

	* ses.el (macroexp): add require for this package, so that
	function `ses--cell' gets macroexp-quote --- this change was
	supposed to be in my previous commit, but left out by mistake.
	(ses--cell): Do not make formula a macroexp-quote of value when
	value, not formula, is *skip*.

2014-10-24  Vincent Belaïche  <vincentb1@users.sourceforge.net>

	* ses.el (macroexp): add require for this package, so that function
	`ses--cell gets macroexp-quote.
	(ses--cell): makes formula a macroexp-quote of value when formula
	is nil. The rationale of this changr is to allow in the future
	shorter SES files, e.g. we could have only `(ses-cell A1 1.0)'
	instead of `(ses-cell A1 1.0 1.0 nil REFLIST)'. In such a case
	reference list REFLIST would be re-computed after load --- thus
	trading off load time against file size.

	* emacs-lisp/package.el (package--alist-to-plist-args): use
	macroexp-quote instead of a lambda expression which has the same
	content as macroexp-quote.
	(macroexp): add require for this package, so that function
	`package--alist-to-plist-args' gets macroexp-quote.

	* emacs-lisp/macroexp.el (macroexp-quote): new defun.

2014-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/ns-win.el (ns-store-cut-buffer-internal)
	(ns-copy-including-secondary): Use gui-set-selection (bug#18816).

2014-10-24  Martin Rudalics  <rudalics@gmx.at>

	* mouse.el (mouse-drag-line): Don't use mouse-pixel-position.
	Calculate increment from last position instead of window edge.
	Add right- and bottom-divider bindings to transient map.

2014-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl-defstruct): Define an internal predicate
	even if :predicate was nil, for the benefit of typep.
	Record the name of the predicate for typep's use.
	(cl--make-type-test): Use pcase.  Obey new
	cl-deftype-satisfies property.

	* epg.el: Use cl-defstruct.