@@ -1,3 +1,9 @@
+2014-10-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-gvfs.el (tramp-gvfs-methods-mounttracker)
+	(tramp-gvfs-mountlocation-signature): Check `tramp-gvfs-enabled'
+	during initialization.  (Bug#18774)
+
 2014-10-25  Vincent Belaïche  <vincentb1@users.sourceforge.net>
 
 	* ses.el (macroexp): add require for this package, so that
